--- a/src/scss/view-form.scss
+++ b/src/scss/view-form.scss
@@ -602,7 +602,7 @@
             flex-direction: column;
             //align-items: center;
             .breadbutter-module-email-discovery {
-                margin: 0 25px 36px;
+                margin: 0 25px 25px;
             }
         }
         &-email {
@@ -1071,6 +1071,28 @@
             }
         }
     }
+
+    .breadbutter-term-policy {
+        font-size: 12px;
+        color: rgba(112, 112, 112, 0.5);
+        a {
+            color: rgba(112, 112, 112, 0.5);
+            text-decoration: underline;
+        }
+    }
+    .breadbutter-incognito {
+        .breadbutter-term-policy-holder {
+            display: none;
+            margin: 0 25px 10px;
+            padding: 0px 13px 14px;
+        }
+    }
+    .breadbutter-login, .breadbutter-register, .breadbutter-register-holder {
+        .breadbutter-term-policy-holder {
+            margin: 0 19px;
+            padding: 15px 13px 14px;
+        }
+    }
 }
 
 .breadbutter-ui {
@@ -1081,9 +1103,12 @@
             transition-timing-function: ease-out;
             &.more-content {
                 height: 105px;
+                //&.bb-toc-term {
+                //    height: 163px;
+                //}
             }
             &.less-content {
-                height: 0;
+                height: 0 !important;
             }
         }
     }
