--- a/src/scss/view-popup.scss
+++ b/src/scss/view-popup.scss
@@ -160,7 +160,7 @@
     transition-duration: 0.125s;
     transition-timing-function: ease-out;
 
-    &.scrolling:not(.basic, .reset-form, .confirm-form, .email-form, .register-form, .local-login-form) {
+    &.scrolling:not(.basic, .reset-form, .confirm-form, .email-form, .register-form, .local-login-form, .magic-link-form) {
       height: 94px!important;
       .breadbutter-incognito {
         .more-content {
@@ -197,6 +197,9 @@
           display: flex;
           margin: 0 -13px 0px -14px;
         }
+        .breadbutter-magic-link-button-holder {
+          display: none;
+        }
         .breadbutter-switch-login {
           display: none;
         }
@@ -210,7 +213,7 @@
     }
 
     &.scrolling{
-      &.basic, &.reset-form, &.confirm-form, &.email-form, &.register-form, &.local-login-form {
+      &.basic, &.reset-form, &.confirm-form, &.email-form, &.register-form, &.local-login-form, &.magic-link-form {
         height: auto!important;
       }
     }
