--- a/src/scss/view-ui.scss
+++ b/src/scss/view-ui.scss
@@ -29,6 +29,11 @@
       height: 24px;
       margin-top: 6px;
       fill: #a0a8b1;
+      &.default-avatar-svg {
+        height: 40px;
+        width: 40px;
+        margin: 0;
+      }
     }
   }
 
@@ -146,6 +151,7 @@
             font-size: 14px;
             background-size: contain;
             margin-right: 16px;
+            background-color: #f8f8f8;
           }
 
           .breadbutter-ui-profile-dashboard-profile {
@@ -235,7 +241,13 @@
       margin: 8px;
       top: 0;
       left: 0;
+      &.default-avatar-svg {
+        height: 40px;
+        width: 40px;
+        margin: 0;
+      }
     }
+
 
     &[data-name='microsoft'] {
       background-color: #fff;
@@ -370,8 +382,8 @@
     }
 
     &[data-name='local'] {
-      background-color: #fff;
-      border: 1px solid #e6e6e6;
+      background-color: #555555;
+      border: 1px solid #555555;
     }
   }
 }
