--- a/src/scss/view-popup.scss
+++ b/src/scss/view-popup.scss
@@ -190,6 +190,9 @@
               display: block;
             }
           }
+          .breadbutter-provider-limit {
+            display: none;
+          }
         }
       }
       .breadbutter-login:not(.local-login) {
