--- a/src/scss/view-button.scss
+++ b/src/scss/view-button.scss
@@ -38,6 +38,7 @@
             border-radius: 30px;
             top: 5px;
             left: 45px;
+            display: inline-block;
         }
     }
 
